--- a/pages/test/audio/audio.wxss
+++ b/pages/test/audio/audio.wxss
@@ -22,7 +22,13 @@
     border-radius:50%
 }
 .progress-view {
-    width: 70%;
+    margin-top: 20rpx;
     margin-bottom: 20rpx;
-    /* display: flex; */
+    display: flex;
+    justify-content: center;
+    align-items: center
+}
+progress {
+    width: 250px;
+    margin-right: 10px
 }
